--- a/Wpf15puzzle/MainWindow.xaml
+++ b/Wpf15puzzle/MainWindow.xaml
@@ -1,140 +1,22 @@
-﻿<controls:MetroWindow x:Class="Wpf15puzzle.MainWindow"
-                      xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                      xmlns:local="clr-namespace:Wpf15puzzle"
-                      xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-                      xmlns:system="clr-namespace:System;assembly=mscorlib"
-                      TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-                      TextElement.FontWeight="Medium"
-                      TextElement.FontSize="20"
-                      FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto"
-                      FontSize="20"
-                      mc:Ignorable="d"
-                      Title="PUZZLE"
-                      Width="500"
-                      Height="650"
-                      WindowStartupLocation="CenterScreen"
-                      KeyDown="Window_KeyDown"
-                      Loaded="Window_Loaded"
-                      Icon="icon.PNG"
-                      TitleCaps="False"
-                      Background="{StaticResource PrimaryBrush100}"
-                      GlowBrush="{DynamicResource AccentColorBrush}">
-  <materialDesign:DialogHost FocusVisualStyle="{x:Null}"
-                             Identifier="dialogMain">
-    <Grid Name="gridMain"
-          Width="440"
-          Height="600">
-      <Grid.RowDefinitions>
-        <RowDefinition Height="auto" />
-        <RowDefinition Height="*" />
-      </Grid.RowDefinitions>
-      <StackPanel Orientation="Vertical">
-        <Grid>
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="auto" />
-          </Grid.ColumnDefinitions>
-          <TextBlock Name="tbHeader"
-                     Grid.Column="0"
-                     Margin="10"
-                     FontSize="40"
-                     FontWeight="Bold"
-                     VerticalAlignment="Center"
-                     HorizontalAlignment="Left">
-          15 Puzzle
-          </TextBlock>
-          <StackPanel Orientation="Horizontal"
-                      Grid.Column="2"
-                      Height="70">
-            <Border Background="{StaticResource PrimaryBrush500}"
-                    CornerRadius="5"
-                    Width="100"
-                    Margin="10,10,0,10">
-              <StackPanel Orientation="Vertical"
-                          VerticalAlignment="Center">
-                <TextBlock HorizontalAlignment="Center"
-                           Foreground="{StaticResource PrimaryBrush200}"
-                           FontSize="16">
-              BEST
-                </TextBlock>
-                <TextBlock Name="tbBest"
-                           HorizontalAlignment="Center"
-                           Foreground="{StaticResource PrimaryHueMidForegroundBrush}">
-              00:00:00
-                </TextBlock>
-
-              </StackPanel>
-            </Border>
-            <Border Background="{StaticResource PrimaryBrush500}"
-                    CornerRadius="5"
-                    Margin="10"
-                    Width="100">
-              <StackPanel Orientation="Vertical"
-                          VerticalAlignment="Center">
-                <TextBlock HorizontalAlignment="Center"
-                           Foreground="{StaticResource PrimaryBrush200}"
-                           FontSize="16">
-              TIMER
-                </TextBlock>
-                <TextBlock Name="tbTimer"
-                           HorizontalAlignment="Center"
-                           Foreground="{StaticResource PrimaryHueMidForegroundBrush}">
-              00:00:00
-                </TextBlock>
-
-              </StackPanel>
-            </Border>
-          </StackPanel>
-        </Grid>
-        <Grid>
-          <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="auto" />
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="auto" />
-          </Grid.ColumnDefinitions>
-          <TextBlock Name="tbDescription"
-                     TextWrapping="Wrap"
-                     Width="250"
-                     FontSize="20"
-                     Margin="20,10,10,10">
-          <Run>Sort the numbers </Run>
-          <LineBreak />
-          <Run Text="             as fast as you can!" />
-          </TextBlock>
-          <Button Name="btnNewGame"
-                  Grid.Column="2"
-                  Margin="10"
-                  Height="40"
-                  FontSize="20"
-                  FocusVisualStyle="{x:Null}"
-                  Style="{StaticResource MaterialDesignRaisedDarkButton}"
-                  Click="btnNewGame_Click">
-            New Game
-          </Button>
-        </Grid>
-      </StackPanel>
-      <Border Name="backgroundBorder"
-              Grid.Row="1"
-              Background="{StaticResource AccentBrush400}"
-              CornerRadius="10"
-              Margin="10"
-              Width="420"
-              Height="420"
-              ToolTip="Use arrow keys to move the puzzles!">
-        <Canvas Name="canvasBoard">
-          <Canvas.Resources>
-            <Style TargetType="Button"
-                   BasedOn="{StaticResource puzzle}">
-            </Style>
-
-          </Canvas.Resources>
-        </Canvas>
-      </Border>
-    </Grid>
-  </materialDesign:DialogHost>
-</controls:MetroWindow>
+﻿<mahapps:MetroWindow x:Class="Wpf15puzzle.MainWindow"
+                     xmlns:mahapps="http://metro.mahapps.com/winfx/xaml/controls"
+                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                     xmlns:local="clr-namespace:Wpf15puzzle"
+                     mc:Ignorable="d"
+                     Title="15 PUZZLE"
+                     Width="500"
+                     Height="650"
+                     WindowStartupLocation="CenterScreen"
+                     Loaded="Window_Loaded"
+                     Icon="Resources/icon2.png"
+                     TitleCaps="False"
+                     Background="Black"
+                     GlowBrush="{DynamicResource {x:Static SystemColors.MenuHighlightBrushKey}}"
+                     ShowIconOnTitleBar="False">
+  <Frame Name="frameMain"
+         NavigationUIVisibility="Hidden"
+         Loaded="frameMain_Loaded"/>
+</mahapps:MetroWindow>
