--- a/Wpf15puzzle/App.xaml
+++ b/Wpf15puzzle/App.xaml
@@ -65,10 +65,11 @@
                        Color="{DynamicResource Accent700}" />
 
       <!--自訂義的Style-->
+
       <Style x:Key="puzzle"
              TargetType="{x:Type Button}">
-        <Setter Property="IsEnabled"
-                Value="False" />
+        <Setter Property="FocusVisualStyle"
+                Value="{x:Null}" />
         <Setter Property="Template">
           <Setter.Value>
             <ControlTemplate TargetType="{x:Type Button}">
