--- a/Wpf15puzzle/MainPage.xaml
+++ b/Wpf15puzzle/MainPage.xaml
@@ -1,4 +1,5 @@
 ﻿<Page x:Class="Wpf15puzzle.MainPage"
+      Name="page"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -39,31 +40,33 @@
                       Grid.Column="0">
             <StackPanel Orientation="Vertical"
                         VerticalAlignment="Center">
+              <StackPanel.Resources>
+                <Style TargetType="Button"
+                       BasedOn="{StaticResource MaterialDesignFloatingActionButton}">
+                  <Setter Property="Margin"
+                          Value="2" />
+                  <Setter Property="Padding"
+                          Value="0" />
+                  <Setter Property="Width"
+                          Value="30" />
+                  <Setter Property="Height"
+                          Value="30" />
+                  <Setter Property="FocusVisualStyle"
+                          Value="{x:Null}" />
+                </Style>
+              </StackPanel.Resources>
               <Button Name="btnPlus"
-                      Style="{StaticResource MaterialDesignFloatingActionDarkButton}"
-                      Width="30"
-                      Height="30"
-                      FocusVisualStyle="{x:Null}"
-                      Margin="2"
-                      Click="btnPlus_Click"
-                      Background="{DynamicResource PrimaryBrush800}">
-                <materialDesign:PackIcon Kind="Plus"
-                                         Width="20"
-                                         Height="20" />
+                      Click="btnPlus_Click">
+                <materialDesign:PackIcon Kind="ChevronUp"
+                                         Width="auto"
+                                         Height="auto" />
               </Button>
               <Button Name="btnMinus"
-                      Style="{StaticResource MaterialDesignFloatingActionDarkButton}"
-                      FocusVisualStyle="{x:Null}"
-                      Width="30"
-                      Height="30"
-                      Margin="2"
-                      Click="btnMinus_Click"
-                      Background="{DynamicResource PrimaryBrush800}">
-                <materialDesign:PackIcon Kind="Minus"
-                                         Width="20"
-                                         Height="20" />
+                      Click="btnMinus_Click">
+                <materialDesign:PackIcon Kind="ChevronDown"
+                                         Width="auto"
+                                         Height="auto" />
               </Button>
-
             </StackPanel>
             <TextBlock Name="tbHeaderN"
                        Text="15"
