--- a/WpfNpuzzle/App.xaml
+++ b/WpfNpuzzle/App.xaml
@@ -1,10 +1,10 @@
-﻿<Application x:Class="Wpf15puzzle.App"
+﻿<Application x:Class="WpfNpuzzle.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:options="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="options"
-             xmlns:local="clr-namespace:Wpf15puzzle"
+             xmlns:local="clr-namespace:WpfNpuzzle"
              StartupUri="MainWindow.xaml">
   <Application.Resources>
     <ResourceDictionary>
