--- a/WpfNpuzzle/MainPage.xaml
+++ b/WpfNpuzzle/MainPage.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="Wpf15puzzle.MainPage"
+﻿<Page x:Class="WpfNpuzzle.MainPage"
       Name="page"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:Wpf15puzzle"
+      xmlns:local="clr-namespace:WpfNpuzzle"
       mc:Ignorable="d"
       d:DesignHeight="650"
       d:DesignWidth="500"
