--- a/WpfNpuzzle/SplashPage.xaml
+++ b/WpfNpuzzle/SplashPage.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="Wpf15puzzle.SplashPage"
+﻿<Page x:Class="WpfNpuzzle.SplashPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="clr-namespace:Wpf15puzzle"
+      xmlns:local="clr-namespace:WpfNpuzzle"
       mc:Ignorable="d"
       d:DesignHeight="650"
       d:DesignWidth="500"
