--- a/WpfNpuzzle/MahAppsOverrides.xaml
+++ b/WpfNpuzzle/MahAppsOverrides.xaml
@@ -3,7 +3,7 @@
                     xmlns:options="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     mc:Ignorable="options"
-                    xmlns:local="clr-namespace:WpfNpuzzle">
+                    xmlns:local="clr-namespace:Wpf15puzzle">
   <!--<ResourceDictionary.MergedDictionaries>
     <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.Blue.xaml" />
   </ResourceDictionary.MergedDictionaries>-->
