--- a/WpfNpuzzle/MainWindow.xaml
+++ b/WpfNpuzzle/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<mahapps:MetroWindow x:Class="WpfNpuzzle.MainWindow"
+﻿<mahapps:MetroWindow x:Class="Wpf15puzzle.MainWindow"
                      xmlns:mahapps="http://metro.mahapps.com/winfx/xaml/controls"
                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                     xmlns:local="clr-namespace:WpfNpuzzle"
+                     xmlns:local="clr-namespace:Wpf15puzzle"
                      mc:Ignorable="d"
                      Width="500"
                      Height="650"
