--- a/WpfNpuzzle/MessageBox.xaml
+++ b/WpfNpuzzle/MessageBox.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="WpfNpuzzle.MessageBox"
+﻿<UserControl x:Class="Wpf15puzzle.MessageBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:WpfNpuzzle"
+             xmlns:local="clr-namespace:Wpf15puzzle"
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="300"
